--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   --contacts-txt-cl: #757575;
   --title-txt-cl: #e5e5e5;
   --main-title-txt-cl: #e5e5e5;
+  --links-txt-cl: #afb1b8;
 
   /* bg colors */
   --dark-bg-cl: #2f303a;
@@ -148,10 +149,7 @@ img {
 .header-container {
   display: flex;
   align-items: center;
-}
-
-.header-nav {
-  margin-right: auto;
+  color: var(--main-txt-cl);
 }
 
 .header-list {
@@ -165,13 +163,12 @@ img {
   font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
-  color: var(--main-txt-cl);
 }
 
 .contacts {
   display: flex;
   align-items: center;
-  margin: 0 auto;
+  margin-left: auto;
 }
 
 .header-mail {
@@ -201,6 +198,7 @@ img {
 
 .contact-icon {
   margin-right: 10px;
+  fill: currentColor;
 }
 
 .contact-icon:hover,
@@ -219,8 +217,6 @@ img {
   letter-spacing: 0.03em;
   color: var(--main-txt-cl);
   text-decoration: none;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -232,17 +228,15 @@ img {
 
 .hero {
   display: flex;
-  background-color: var(--dark-bg-cl);
   outline: 1px solid red;
-  max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  height: 600px;
 
-  background-image: url(../images/hero/background.jpg),
-    linear-gradient(to right, rgb(255, 255, 255) 155px, rgba(25, 28, 38, 0.2) 155px);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero/background.jpg);
   background-repeat: no-repeat;
-  background-position: top right, center;
+  background-position: center;
+  background-size: contain;
 }
 
 .main-title {
@@ -257,7 +251,7 @@ img {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--main-title-txt-cl);
+  color: var(--btn-txt-cl);
 }
 
 /* team section */
@@ -282,6 +276,8 @@ img {
   justify-content: center;
   width: 44px;
   height: 44px;
+  color: var(--links-txt-cl);
+  background-color: var(--btn-txt-cl);
   border-radius: 50%;
 }
 
@@ -290,7 +286,6 @@ img {
   color: var(--btn-txt-cl);
   background-color: var(--accent-txt-cl);
 }
-
 .socials-icon {
   fill: currentColor;
 }
@@ -306,19 +301,20 @@ img {
 }
 
 .about-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
-  height: 120px;
-  margin: 0 auto;
-  background-color: #f5f4fa;
-  border-radius: 4px;
 }
 
 .about-list {
   display: flex;
   gap: 30px;
+}
+
+.background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  background-color: var(--light-bg-cl);
+  border-radius: 4px;
 }
 
 .about-description {
@@ -375,6 +371,7 @@ img {
 }
 
 .team-item {
+  background-color: var(--btn-txt-cl);
   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -407,7 +404,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-txt-cl);
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .team p {
@@ -419,6 +416,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--contacts-txt-cl);
+  margin-bottom: 15px;
 }
 
 /* clients section */
@@ -426,6 +424,7 @@ img {
 .clients {
   display: flex;
   padding-bottom: 81px;
+  padding-top: 94px;
 }
 
 .clients-title {
@@ -441,6 +440,7 @@ img {
 }
 
 .clients-list {
+  margin: 0;
   padding: 0;
   display: flex;
   text-align: center;
@@ -448,23 +448,29 @@ img {
   gap: 30px;
 }
 
-.clients-item {
+.client-link {
   display: flex;
   width: 170px;
   height: 92px;
   text-align: center;
   justify-content: center;
-  border: 1px solid #afb1b8;
+  color: var(--links-txt-cl);
+  background-color: var(--btn-txt-cl);
+  border: 1px solid var(--links-txt-cl);
   border-radius: 4px;
 }
 
-.client-icon:hover,
-.client-icon:focus {
+.client-link:hover,
+.client-link:focus {
   color: var(--accent-txt-cl);
   background-color: var(--btn-txt-cl);
+  border-color: var(--accent-txt-cl);
 }
 
 .client-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   fill: currentColor;
   margin: 16px 32px;
 }
