--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,11 @@ img {
   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
+.card-set-item:focus,
+.card-set-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 /* base style */
 
 .section {
@@ -508,6 +513,10 @@ img {
   color: var(--contacts-txt-cl);
 }
 
+.work-card:hover,
+.work-card:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 /* footer section */
 
 .footer {
